gce-rke-cluster/deploy/prometheus-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-k8s-ing
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  tls:
    - hosts:
      - prometheus-k8s.gcp-rke-demo.its-software-services.com
      secretName: prometheus-k8s-cert
  rules:
    - host: prometheus-k8s.gcp-rke-demo.its-software-services.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-k8s
                port:
                  number: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-k8s-ing-http
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  rules:
    - host: prometheus-k8s2.gcp-rke-demo.its-software-services.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-k8s
                port:
                  number: 9090
